--- a/src/index.css
+++ b/src/index.css
@@ -526,6 +526,9 @@ p {
     padding: 0.5rem;
   }
 
+  .about-me {
+  }
+
   .about-me h4 {
     text-align: center;
     margin-bottom: 2rem;
@@ -584,13 +587,14 @@ p {
   .nav-container {
     height: 4rem;
     padding: 0.5rem 0;
+    margin-bottom: 4rem;
   }
   h1 {
     line-height: 2.5rem;
   }
 
-  .main-container {
-    margin-top: 4rem;
+  .cta-container {
+    width: 100%;
   }
 
   .cta-container span {
@@ -600,6 +604,10 @@ p {
 
   .cta-container p {
     margin-top: 4rem;
+  }
+
+  .cta-btn {
+    max-width: 100%;
   }
 
   .tools {
@@ -668,5 +676,22 @@ p {
     overflow: hidden;
 
     z-index: -1;
+  }
+
+  .contact-section p {
+    margin: 2rem 0;
+  }
+
+  .contact-section {
+    width: 100%;
+  }
+
+  .resume {
+    width: 100%;
+    padding: 1rem 3rem;
+  }
+
+  .contact-section a {
+    width: 100%;
   }
 }
