--- a/src/index.css
+++ b/src/index.css
@@ -148,9 +148,15 @@ p {
 .resume {
   background-color: transparent;
   color: var(--primary);
-  border: 1px solid var(--primary);
+  border: 2px solid var(--primary);
   padding: 0.5rem 1.5rem;
-  font-size: var(--fs-10100);
+  font-size: var(--fs-1000);
+
+  width: 100%;
+  padding: 1rem 3rem;
+}
+.contact-section a {
+  width: 100%;
 }
 
 .mobile-menu-icon {
