--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,6 @@ button:hover {
 button:focus {
   outline: none;
 }
-a {
-  color: var(--primary);
-}
 
 .icon {
   color: var(--secondary);
@@ -413,6 +410,7 @@ p {
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
   transition: height 0.25s ease;
   z-index: 2;
 }
@@ -480,6 +478,8 @@ p {
 .card-links {
   display: flex;
   justify-content: center;
+  gap: 10px;
+  color: var(--primary);
 }
 
 .card-icon {
