--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   --primary: #bb86fc;
   --background: #121212;
   --overlay-5: rgb(25, 25, 25);
-  --overlay-7: rgb(35, 35, 35);
+  --overlay-7: rgba(35, 35, 35, 0.5);
   --overlay-9: rgba(45, 45, 45);
   --overlay-12: rgba(255, 255, 255, 0.12);
   --overlay-16: rgba(255, 255, 255, 0.16);
@@ -139,6 +139,11 @@ p {
 
 .heading {
   font-size: 250px;
+  text-transform: uppercase;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: var(--overlay-9);
 }
 
 .nav-container {
@@ -286,6 +291,7 @@ p {
   padding: 4rem 0;
   border-radius: 10px;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .tool-container {
@@ -307,11 +313,12 @@ p {
   margin-bottom: 1rem;
   letter-spacing: 5px;
   text-transform: uppercase;
-  position: absolute;
+  /* position: absolute; */
   z-index: -2;
   color: var(--overlay-9);
   top: -30px;
   left: 30px;
+  text-align: center;
 }
 
 .tool-container p {
@@ -320,11 +327,30 @@ p {
   font-size: var(--fs-1000);
 }
 
+.tools-subheading {
+  transform: translateY(60px);
+  margin: 20px 0;
+  text-align: center;
+  color: var(--secondary);
+  font-size: var(--fs-600);
+}
+
+@media screen and (max-width: 400px) {
+  .tools-subheading {
+    transform: translateY(0);
+    font-size: var(--fs-900);
+  }
+
+  .tools {
+    margin-top: 0;
+  }
+}
+
 /**** About ****/
 
 .about-me {
-  width: 70%;
-  margin: 300px auto 500px;
+  /* width: 70%; */
+  margin: 300px 50px 500px;
   position: relative;
 }
 
@@ -335,8 +361,7 @@ p {
   position: absolute;
   z-index: -1;
   color: var(--overlay-9);
-  top: -50px;
-  left: -200px;
+  left: -60px;
 }
 
 .about-me p {
@@ -346,8 +371,9 @@ p {
 .about-me-container {
   display: flex;
   align-items: center;
-  gap: 2rem;
-  width: 100%;
+  justify-content: center;
+  gap: 6rem;
+  width: 80%;
 }
 
 .about-text-container {
@@ -398,11 +424,15 @@ p {
 }
 
 .project-card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap: 20px;
-  justify-items: center;
+  /* display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+
   margin-bottom: 500px;
+  justify-items: center;
 }
 
 .card {
@@ -411,9 +441,8 @@ p {
   width: 320px;
   display: flex;
   flex-direction: column;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
+  background-color: var(--overlay-7);
+  transition: all 0.2s ease-in-out;
 }
 
 .card-image {
@@ -421,6 +450,8 @@ p {
 }
 
 .card:hover {
+  background-color: var(--overlay-9);
+  transform: translateY(-10px);
 }
 
 .card-text {
@@ -428,11 +459,12 @@ p {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  backdrop-filter: blur(2px) brightness(10%);
+  /* backdrop-filter: blur(2px) brightness(10%); */
   height: 450px;
   overflow: hidden;
   margin: auto 0;
   border-radius: 13px;
+  justify-content: space-between;
 }
 
 .card-text-show {
@@ -450,7 +482,7 @@ p {
   overflow: hidden;
   height: 70px;
   font-size: var(--fs-1100);
-  margin-top: auto;
+  margin-top: 20px;
 }
 
 .card-btn {
@@ -484,10 +516,196 @@ p {
   display: flex;
   justify-content: center;
   gap: 10px;
+  /* margin-top: auto; */
 }
 
 .card-icon {
   color: var(--primary);
+}
+
+.hl-card {
+  background-image: linear-gradient(
+    to right top,
+
+    rgba(132, 94, 194, 0.5),
+    rgba(180, 92, 182, 0.5),
+    rgba(214, 95, 165, 0.5),
+    rgba(237, 105, 147, 0.5),
+    rgba(250, 122, 130, 0.5),
+    rgba(255, 137, 119, 0.5),
+    rgba(255, 154, 110, 0.5),
+    rgba(255, 172, 105, 0.5),
+    rgba(255, 190, 102, 0.5),
+    rgba(255, 209, 102, 0.5),
+    rgba(255, 228, 105, 0.5),
+    rgba(249, 248, 113, 0.5)
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9BF8F4", endColorstr="#6F7BF7", GradientType=1 );
+  border-radius: 10px;
+  padding: 50px;
+  backdrop-filter: blur(5px);
+  margin-bottom: 40px;
+  display: flex;
+  gap: 40px;
+  position: relative;
+
+  h3 {
+    /* white-space: nowrap; */
+    text-align: center;
+    line-height: 50px;
+  }
+}
+
+.hl-card-tools {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  color: var(--primary);
+  font-weight: bold;
+}
+
+.hl-desc {
+  margin-top: 20px;
+}
+
+.hl-card-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* padding: 50px; */
+  padding-right: 50px;
+  width: 55%;
+  /* background-image: linear-gradient(
+    to right,
+    
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.8)
+    ); */
+  /* justify-content: center; */
+}
+
+.hl-button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  /* align-items: center; */
+  margin-top: 40px;
+  /* justify-content: start; */
+  align-self: start;
+  /* width: 100%; */
+}
+
+.hl-card-btn {
+  background-color: transparent;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  font-family: inherit;
+  border-radius: 5px;
+  padding: 4px 10px;
+  /* margin-top: auto; */
+  margin-bottom: 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  align-self: start;
+}
+
+.hl-image-container {
+  /* flex: 1; */
+  height: 400px;
+  width: 40%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  right: 50px;
+  z-index: -2;
+  box-shadow: var(--bs);
+}
+
+.hl-image {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  height: 60px;
+  width: 500px;
+  right: 300px;
+  bottom: 80px;
+  z-index: -1;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 28px 46px, rgba(0, 0, 0, 0.5) 0px 20px 20px;
+}
+
+.hl-image-2 {
+  height: 300px;
+  width: 200px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  overflow: hidden;
+  position: absolute;
+  right: -50px;
+  top: 200px;
+  z-index: -1;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 28px 46px, rgba(0, 0, 0, 0.5) 0px 20px 20px;
+}
+
+@media screen and (max-width: 400px) {
+  .hl-card {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .hl-card-text-container {
+    width: 100%;
+    padding-right: 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hl-card-tools {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    row-gap: 0;
+    column-gap: 20px;
+  }
+
+  .hl-desc {
+    text-align: center;
+  }
+  .hl-button-container {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hl-card-btn {
+    align-self: center;
+  }
+
+  .hl-image-container {
+    width: 100%;
+  }
+
+  .hl-image {
+    height: 40px;
+    width: 300px;
+    background-size: cover;
+    bottom: 100px;
+    left: 0;
+  }
+
+  .hl-image-2 {
+    top: 500px;
+    right: 0px;
+    height: 200px;
+    width: 125px;
+  }
 }
 
 /***** Article *****/
@@ -525,12 +743,14 @@ p {
   background-color: var(--overlay-5);
   border-radius: 10px;
   padding: 2rem;
-  transition: transform 0.25s ease;
+  transition: all 0.25s ease;
+  backdrop-filter: blur(5px);
 }
 
 .article-card:hover {
   transform: translateY(-5px);
   background-color: var(--overlay-7);
+  backdrop-filter: blur(5px);
 }
 
 .article-card h5 {
@@ -655,7 +875,6 @@ p {
     z-index: 5;
     display: flex;
     flex-direction: column;
-    backdrop-filter: blur(2px) brightness(20%);
   }
   .about-me h2 {
     text-align: center;
@@ -803,7 +1022,7 @@ p {
   .article-card {
     justify-content: center;
     align-items: center;
-
+    background-color: var(--overlay-7);
     height: 4rem;
     width: 18rem;
 
