--- a/src/index.css
+++ b/src/index.css
@@ -373,7 +373,7 @@ p {
   align-items: center;
   justify-content: center;
   gap: 6rem;
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
 }
 
@@ -546,10 +546,11 @@ p {
   border-radius: 10px;
   padding: 50px;
   backdrop-filter: blur(5px);
-  margin-bottom: 40px;
   display: flex;
   gap: 40px;
   position: relative;
+  max-width: 1600px;
+  margin: 0 auto 40px;
 
   h3 {
     /* white-space: nowrap; */
